	have not been downloaded yet, by downloading them - and retaining directory structure as
	far as is valid
- The setup program isn't signed - so Windows 8 complains
- The autoupdate feature, on Windows 8 requires promping to complete
- On first run, on windows 8, security issue causes prompting
- Upload speed not showing
- Must check md5 hash on upload!
- Download is not downloading complete file!

## Missing features
Panda-Tray:
- Favourites (link to digital panda should be added)
- I think the panda should ask before updating - but that can wait until we have something more stable
- Status: speed uploading, files up to date etc.
- Look if there's a better way to detect online changes than iterating through everything
- Double click the panda, should open panda folder
- Account settings should be an additinoal tab away
- Restart application after update


## Panda-Tray:

0.15
* New functionality
- Now handling multiple accounts - files are stored under /DigitalPanda/Username
- Instead of deleting remote files, they get moved to trash
- If there were any changes remotely, or locally, panda immediately looks for work without resting

0.14
* Bug fixes:
- Downloads were coming down incomplete - added check to ensure that file hashes match

0.13
* Bug fixes:
- Downloads and uploads can be interrupted, so that panda tray doesn't keep running in background
* New functionality
- Local files are moved to recycle bin instead of being deleted
- More detailed status updates (filename of what is being uploaded,deleted,downloaded), and download 
  progress & speed

0.12
* Bug fixes:
- Fixed some bugs syncing containers that contain spaces
- Fixed a unicode bug that broken syncing local db

0.11
* Bug fixes:
- Fixed bugs around folder syncing (deleting folders locally - wouldn't sync correctly remotely)
* New functionality
- User agent added on swift calls ; attempt to override default for esky

0.10
* Bug fixes: